k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phatbrew
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
spec:
  ingressClassName: nginx
  rules:
    - host: phatbrew.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: web, port: { number: 3000 } } }
    - host: cms.phatbrew.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: cms, port: { number: 3000 } } }
    - host: media.phatbrew.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: minio, port: { number: 9000 } } }
    - host: mail.phatbrew.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: mailpit, port: { number: 8025 } } }
